--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                 <div class="md:w-1/2 flex justify-center">
                     <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-primary shadow-xl">
                         <!-- REPLACE WITH YOUR IMAGE -->
-                        <img src="https://via.placeholder.com/400x400" alt="Profile Picture" class="w-full h-full object-cover">
+                        <img src="Anish%20Siddiqui%20Badge%20Photo.jpg" alt="Profile Picture" class="w-full h-full object-cover">
+
                     </div>
                 </div>
             </div>
