--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
                         <!-- EDIT THIS DESCRIPTION -->
                         Passionate engineer with expertise in embedded systems and application development. Skilled in hardware prototyping, software development, and data analysis. Committed to creating innovative solutions to complex problems using advanced technology.
                     </p>
-                    <a href="#" class="bg-primary hover:bg-secondary text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center">
+                    <a href="Anish_Siddiqui_Resume.pdf" download class="bg-primary hover:bg-secondary text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                         </svg>
-                        Download Resume
+                Download Resume
                     </a>
+                    
                 </div>
                 <!-- Image -->
                 <div class="md:w-1/2 flex justify-center">
