--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="md:w-1/2 flex justify-center">
                     <div class="relative w-72 h-72 md:w-96 md:h-96 rounded-full overflow-hidden border-4 border-primary shadow-xl">
                         <!-- REPLACE WITH YOUR IMAGE -->
-                        <img src="Anish%20Siddiqui%20Badge%20Photo2.jpg" alt="Profile Picture" class="w-full h-full object-cover">
+                        <img src="Anish%20Siddiqui%20Badge%20Photo.jpg" alt="Profile Picture" class="w-full h-full object-cover">
                     </div>
                 </div>
             </div>
