--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h1 class="text-4xl md:text-5xl font-bold text-primary mb-4 section-header">Anish Siddiqui</h1>
                     <p class="text-lg md:text-xl text-gray-700 mb-8">
                         <!-- EDIT THIS DESCRIPTION -->
-                        Passionate engineer with expertise in embedded systems and application development. Skilled in hardware prototyping, software development, and data analysis. Committed to creating innovative solutions to complex problems using advanced technology.
+                        Passionate engineer v2 with expertise in embedded systems and application development. Skilled in hardware prototyping, software development, and data analysis. Committed to creating innovative solutions to complex problems using advanced technology.
                     </p>
                     <a href="Anish_Siddiqui_Resume.pdf" download class="bg-primary hover:bg-secondary text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -97,7 +97,7 @@
                 <div class="md:w-1/2 flex justify-center">
                     <div class="relative w-72 h-72 md:w-96 md:h-96 rounded-full overflow-hidden border-4 border-primary shadow-xl">
                         <!-- REPLACE WITH YOUR IMAGE -->
-                        <img src="Anish%20Siddiqui%20Badge%20Photo.jpg" alt="Profile Picture" class="w-full h-full object-cover">
+                        <img src="Anish%20Siddiqui%20Badge%20Photo2.jpg" alt="Profile Picture" class="w-full h-full object-cover">
                     </div>
                 </div>
             </div>
