--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h1 class="text-4xl md:text-5xl font-bold text-primary mb-4 section-header">Anish Siddiqui</h1>
                     <p class="text-lg md:text-xl text-gray-700 mb-8">
                         <!-- EDIT THIS DESCRIPTION -->
-                        Passionate engineer v7 with expertise in embedded systems and application development. Skilled in hardware prototyping, software development, and data analysis. Committed to creating innovative solutions to complex problems using advanced technology.
+                        Passionate engineer v3 with expertise in embedded systems and application development. Skilled in hardware prototyping, software development, and data analysis. Committed to creating innovative solutions to complex problems using advanced technology.
                     </p>
                     <a href="Anish_Siddiqui_Resume.pdf" download class="bg-primary hover:bg-secondary text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -442,7 +442,10 @@
                     </div>
                     <div>
                         <h3 class="text-lg font-semibold text-gray-800">LinkedIn</h3>
-                        <a href="#" class="text-blue-600 hover:underline">www.linkedin.com/in/anishsiddiqui99</a>
+                        <a href="https://www.linkedin.com/in/anishsiddiqui99" target="_blank" class="text-blue-600 hover:underline">
+                        www.linkedin.com/in/anishsiddiqui99
+                        </a>
+
                     </div>
                 </div>
                 
